# rag-poc

./: README.md  pyproject.toml
app/: main.py
app/services/: document_loader.py  rag_service.py
chroma_db/: chroma.sqlite3
data/: document_1744458887.txt  document_1744461349.txt  document_1744461534.txt
frontend/: main.py
